﻿v10.0
-----


v9.9
-----
+ Added an option to toggle the display of the Enhanced Steam loading and status bar
: Fixed a bug that caused custom wallet amounts not to process correctly
: Fixed a bug where the about menu in the header wasn't being hidden properly
: Fixed SteamSpy NaN errors from showing on store pages
: Fixed numerous broken images that were the result of being served from domains with invalid SSL
- Removed Enhanced Steam's "Account Total" feature replaced by a link to Valve's official stats

v9.8.1
-----
+ Updated jQuery library to v3.3.1
+ Added the ability to toggle video player fullscreen with double clicks
: Fixed several bugs introduced by jQuery library update
: Fixed multiple bugs caused by Valve retiring their BindTooltips functions
: Fixed a bug that caused some options page elements not to localize correctly
: Fixed a bug where the HD control wasn't added to videos in the store under some circumstances

v9.8
-----
+ Improved performance of inventory market total calculations
: Fixed a bug that caused quick sell and instant sell functions to not work correctly in Firefox
: Fixed a bug that caused wishlist price sorting not to work correctly for some currencies
: Fixed a bug that caused "Activate a product" link to show up in language menu incorrectly
: Fixed a bug that caused multiple product activations dialog to sometimes display incorrectly
: Updated several wishlist-related functions to work with Steam's new page layout
- Removed several wishlist-related functions that were added by Valve

v9.7
-----
+ Added the ability to purchase custom gift cards for any amount over the minimum
+ Added support for additional currencies introduced by Valve
: Fixed a bug that caused platform icons not to show correctly in Firefox
: Fixed a bug with multiple key activations that resulted in an occasional error
: Fixed a bug in the options page formatting validation in Firefox